# AntennaLab

./: .gitignore  ARCHITECTURE.md  FEATURE_ROADMAP.md  FOLDER_LAYOUT.md  PRODUCT_SPEC.md  PROJECT_OVERVIEW.md  README.md  Repo layout.txt  TASKS.md  config⁄antennalab.yaml  pyproject.toml
config/: alerts.csv  antennalab.yaml  bookmarks.csv
config/profiles/: antennas.yaml  locations.yaml
src/antennalab/: bookmarks.py  cli.py  config.py
src/antennalab/analysis/: alerts.py  calibration.py  calibration_profiles.py  compare.py  monitor.py  noise_floor.py  spectrum.py  waterfall.py
src/antennalab/core/: models.py  plugins.py  registry.py
src/antennalab/instruments/: rtlsdr.py
src/antennalab/report/: export_csv.py  monitor_plot.py  plot.py  report_pack.py  report_pack_html.py  run_report.py  waterfall_html.py  waterfall_plot.py
tests/: test_alerts.py  test_baseline.py  test_bookmark_report.py  test_bookmarks.py  test_bookmarks_io.py  test_calibration_profiles.py  test_compare.py  test_monitor.py  test_monitor_plot.py  test_noise_floor.py  test_report_pack.py  test_report_pack_html.py  test_sim_scan.py  test_waterfall.py  test_waterfall_html.py  test_waterfall_plot.py
